# MapleEngine

./: CMakeLists.txt
src/: App.cc  App.cpp  App.h  App.hh  Components.h  Entity.cpp  Entity.h  Filesystem.cpp  Filesystem.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Physics.h  Scene.cpp  Scene.h  Scene2D.cpp  Scene2D.h  Shader.cpp  Shader.h  Strings.cpp  Strings.h  Utils.h
src/Core/: Component.h  Entity.cpp  Entity.h
src/ECS/: Component.h  Entity.cpp  Entity.h
src/ECS/Components/: BoxCollider.cpp  BoxCollider.h  BoxRenderer.cpp  BoxRenderer.h  Gravity.cpp  Gravity.h  MousePosition.cpp  MousePosition.h  PlayerInput.cpp  PlayerInput.h  RecRenderer.cpp  RecRenderer.h  RigidBody.cpp  RigidBody.h  SphereRenderer.cpp  SphereRenderer.h  WallCollision.cpp  WallCollision.h
src/GameObjects/: Player.cpp  Player.h  Wall.cpp  Wall.h
src/Log/: msg.h
src/Physics/: CollisionHandler.cpp  CollisionHandler.h  Mesh.cpp  Mesh.h  Physics.cpp  Physics.h
src/entrypoint/: main.cc  main.cpp
src/gameObjects/: StaticObject.cpp  StaticObject.h
